# Epicinium-NeuralNewt

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE.txt  README.md  settings.json
libs/openssl/: e_os2.h  libcrypto.so.1.1
src/: brainname.cpp  brainname.hpp  gamedirector.cpp  gamedirector.hpp  gamedirector_spec.hpp  libneuralnewt.cpp  main.cpp  newtbraintrainer.cpp  newtbraintrainer.hpp  setting.cpp  setting.hpp
src/nnet/: module.cpp  module.hpp  neuralnewtbrain.cpp  neuralnewtbrain.hpp
